--- a/index.html
+++ b/index.html
@@ -1,153 +1,130 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Excel MCQ Test - 30 Questions</title>
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif}
-    body{background:#f0f2f5;display:flex;justify-content:center;padding:20px}
-    .container{max-width:750px;width:100%;background:white;border-radius:15px;padding:30px;box-shadow:0 10px 30px rgba(0,0,0,0.1);margin:20px auto;text-align:center}
-    h1,h2{color:#2c3e50;margin-bottom:20px}
-    input,button{width:100%;padding:15px;margin:12px 0;border-radius:10px;border:1px solid #ddd;font-size:17px}
-    button{background:#27ae60;color:white;cursor:pointer;font-size:19px;font-weight:bold}
-    }
-    button:hover{background:#1e8449}
-    .option{margin:15px 0;padding:15px;background:#f8f9fa;border-radius:10px;cursor:pointer;font-size:16px}
-    .option input{margin-right:12px}
-    #timerMsg{font-size:19px;color:#c0392b;margin-top:20px;font-weight:bold}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Excel MCQ Test</title>
+<style>
+  body {font-family: Arial, sans-serif; background: #f0f2f5; display: flex; justify-content: center; padding: 20px;}
+  .box {background: white; padding: 40px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); width: 100%; max-width: 700px; text-align: center;}
+  h1 {color: #2c3e50; margin-bottom: 30px;}
+  input {width: 100%; padding: 15px; margin: 15px 0; border-radius: 10px; border: 1px solid #ccc; font-size: 18px;}
+  button {width: 100%; padding: 15px; background: #27ae60; color: white; border: none; border-radius: 10px; font-size: 20px; cursor: pointer;}
+  button:hover {background: #1e8449;}
+  .hide {display: none;}
+  .qbox {margin: 20px 0; font-size: 19px; font-weight: bold;}
+  .opt {display: block; background: #f8f9fa; padding: 15px; margin: 12px 0; border-radius: 10px; text-align: left; cursor: pointer;}
+  .opt input {margin-right: 12px;}
+</style>
 </head>
 <body>
 
-  <div class="container" id="startScreen">
-    <h1>Excel MCQ Test (30 Questions)</h1>
-    <p><strong>Test Start Time:</strong> <span id="startTimeDisplay"></span></p>
-    <input type="text" id="studentName" placeholder="अपना पूरा नाम लिखें" required />
-    <input type="text" id="studentClass" placeholder="कक्षा (जैसे 10th A)" required />
-    <input type="text" id="rollNo" placeholder="रोल नंबर" required />
-    <button id="startBtn">टेस्ट शुरू करें</button>
-    <p id="timerMsg"></p>
-  </div>
+<div id="start" class="box">
+  <h1>Excel MCQ Test (30 प्रश्न)</h1>
+  <p>कोई टाइम लिमिट नहीं – कभी भी दे सकते हो</p>
+  <input type="text" id="naam" placeholder="अपना पूरा नाम लिखें" required>
+  <button onclick="startTest()">टेस्ट शुरू करें</button>
+</div>
 
-  <div class="container" id="quizScreen" style="display:none">
-    <h2>प्रश्न <span id="currentQ">1</span>/30</h2>
-    <div id="question" style="font-size:19px;margin:30px 0"></div>
-    <div id="options"></div>
-    <button id="nextBtn">अगला प्रश्न →</button>
-  </div>
+<div id="quiz" class="box hide">
+  <h2>प्रश्न <span id="no">1</span>/30</h2>
+  <div class="qbox" id="question"></div>
+  <div id="options"></div>
+  <button onclick="next()">अगला प्रश्न →</button>
+</div>
 
-  <div class="container" id="resultScreen" style="display:none">
-    <h1>धन्यवाद! टेस्ट सफलतापूर्वक जमा हो गया</h1>
-    <p>नाम: <strong id="finalName"></strong></p>
-    <p>स्कोर: <strong id="finalScore"></strong>/30</p>
-    <p>प्रतिशत: <strong id="finalPercent"></strong></p>
-  </div>
+<div id="result" class="box hide">
+  <h1>धन्यवाद!</h1>
+  <p>नाम: <b id="finalName"></b></p>
+  <p>स्कोर: <b id="score"></b>/30</p>
+  <p>प्रतिशत: <b id="percent"></b>%</p>
+</div>
 
 <script>
-// ==== SET THESE TWO THINGS ONLY ====
-const WEB_APP_URL (tumhara wahi jo diya tha)
 const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwxqo9BmWtPdAFBtNqllSvKt10Yq8nJ_JQ3o6dANcyPMnOkXB54VkgXYBmY1KObmnnScg/exec";
-
-// ==== TEST START TIME CHANGE KAR DO (India time mein) ====
-const TEST_START_TIME = new Date("2025-12-04 10:00:00").getTime();   // ← YAHAN DATE AUR TIME BADAL DENA
 
 const questions = [
   {q:"Excel में किसी cell का address क्या कहलाता है?", o:["Cell Name","Cell Reference","Cell Pointer","None"], a:1},
   {q:"Latest Excel में कुल कितनी rows होती हैं?", o:["1,048,576","65,536","16,384","1,00,000"], a:0},
   {q:"Freeze Panes का काम क्या है?", o:["Row/Column fix करना","Data delete करना","Print करना","Chart बनाना"], a:0},
-  {q:"=SUM(A1:A10) का मतलब?", o:["A1 से A10 तक जोड़ना","औसत निकालना","गिनती करना","Text जोड़ना"], a:0},
+  {q:"=SUM(A1:A10) का मतलब?", o:["A1 से A10 तक जोड़ना","औसत","गिनती","Text जोड़ना"], a:0},
   {q:"VLOOKUP का पूरा नाम?", o:["Vertical Lookup","Very Large Lookup","Value Lookup","None"], a:0},
   {q:"Ctrl + ; दबाने से क्या होता है?", o:["आज की तारीख","समय","दोनों","कुछ नहीं"], a:0},
   {q:"Conditional Formatting कहाँ मिलती है?", o:["Home Tab","Insert Tab","Data Tab","View Tab"], a:0},
   {q:"Pivot Table का shortcut?", o:["Alt+N+V","Ctrl+T","Alt+D+P","कोई नहीं"], a:0},
   {q:"Filter लगाने का shortcut?", o:["Ctrl+Shift+L","Ctrl+F","Alt+A+T","Ctrl+D"], a:0},
   {q:"Excel फाइल का extension?", o:[".xlsx",".docx",".pptx",".txt"], a:0},
-  {q:"=AVERAGE() फॉर्मूला क्या करता है?", o:["औसत","जोड़","गिनती","बड़ा number"], a:0},
-  {q:"Ctrl + D का काम?", o:["नीचे की cell fill","ऊपर copy","दायें copy","delete"], a:0},
+  {q:"=AVERAGE() क्या करता है?", o:["औसत","जोड़","गिनती","बड़ा number"], a:0},
+  {q:"Ctrl + D का काम?", o:["नीचे fill","ऊपर copy","दायें copy","delete"], a:0},
   {q:"Chart बनाने के लिए tab?", o:["Insert","Home","Data","Page Layout"], a:0},
-  {q:"Sort करने के लिए?", o:["Data Tab → Sort","Home → Sort","View → Sort","कोई नहीं"], a:0},
   {q:"=COUNT() क्या गिनता है?", o:["संख्या वाली cells","सभी cells","खाली cells","text"], a:0},
   {q:"IF formula का syntax?", o:["=IF(condition,true,false)","=IFTRUE","=WHEN","कोई नहीं"], a:0},
-  {q:"Print preview कहाँ मिलता है?", o:["File → Print","Ctrl+P","दोनों","View Tab"], a:2},
-  {q:"Header & Footer कहाँ डालते हैं?", o:["Insert Tab","View Tab","Page Layout","Home"], a:0},
-  {q:"Ctrl + Shift + $ से क्या होता है?", o:["Currency format","Percentage","Date","Text"], a:0},
-  {q:"Data validation कहाँ मिलता है?", o:["Data Tab","Home Tab","Insert","Review"], a:0},
-  {q:"=TODAY() function क्या देता है?", o:["आज की तारीख","समय","दोनों","कुछ नहीं"], a:0},
-  {q:"Wrap text का बटन कहाँ है?", o:["Home Tab","Insert","View","Page Layout"], a:0},
-  {q:"Merge & Center कहाँ है?", o:["Home Tab","Insert","Data","View"], a:0},
-  {q:"Find & Replace का shortcut?", o:["Ctrl+F","Ctrl+H","Ctrl+R","Alt+F"], a:1},
-  {q:"Protect sheet का option?", o:["Review Tab","Data Tab","Home","View"], a:0},
-  {q:"Hyperlink डालने के लिए?", o:["Ctrl+K","Ctrl+L","Alt+H","Insert Tab"], a:0},
-  {q:"=PROPER() function क्या करता है?", o:["पहला अक्षर बड़ा","सब बड़ा","सब छोटा","कोई नहीं"], a:0},
-  {q:"Page break preview mode?", o:["View Tab","Page Layout","Insert","Status bar"], a:0},
-  {q:"Goal Seek कहाँ मिलता है?", o:["Data → What-If Analysis","Formulas","Home","Review"], a:0},
-  {q:"Excel में maximum columns कितने होते हैं?", o:["16,384","1","65,536","1,048,576","कोई सीमा नहीं"], a:0}
+  {q:"Print preview?", o:["File → Print","Ctrl+P","दोनों","View Tab"], a:2},
+  {q:"Header & Footer कहाँ?", o:["Insert Tab","View Tab","Page Layout","Home"], a:0},
+  {q:"Ctrl + Shift + $ ?", o:["Currency format","Percentage","Date","Text"], a:0},
+  {q:"Data validation कहाँ?", o:["Data Tab","Home Tab","Insert","Review"], a:0},
+  {q:"=TODAY() क्या देता है?", o:["आज की तारीख","समय","दोनों","कुछ नहीं"], a:0},
+  {q:"Wrap text कहाँ?", o:["Home Tab","Insert","View","Page Layout"], a:0},
+  {q:"Merge & Center कहाँ?", o:["Home Tab","Insert","Data","View"], a:0},
+  {q:"Find & Replace shortcut?", o:["Ctrl+H","Ctrl+F","Ctrl+R","Alt+F"], a:0},
+  {q:"Protect sheet कहाँ?", o:["Review Tab","Data Tab","Home","View"], a:0},
+  {q:"Hyperlink shortcut?", o:["Ctrl+K","Ctrl+L","Alt+H","Insert Tab"], a:0},
+  {q:"=PROPER() क्या करता है?", o:["पहला अक्षर बड़ा","सब बड़ा","सब छोटा","कोई नहीं"], a:0},
+  {q:"Page break preview?", o:["View Tab","Page Layout","Insert","Status bar"], a:0},
+  {q:"Goal Seek कहाँ?", o:["Data → What-If","Formulas","Home","Review"], a:0},
+  {q:"Excel में columns कितने?", o:["16,384","1,048,576","65,536","कोई नहीं"], a:0},
+  {q:"=CONCATENATE का नया नाम?", o:["TEXTJOIN","CONCAT","&","दोनों A और B"], a:3}
 ];
 
-let currentQuestion = 0, score = 0, selectedAnswers = [], studentInfo = {};
+let i = 0, score = 0, name = "", answers = [];
 
-document.getElementById('startTimeDisplay').textContent = new Date(TEST_START_TIME).toLocaleString('en-IN');
-
-document.getElementById('startBtn').onclick = () => {
-  const now = new Date().getTime();
-  if (now < TEST_START_TIME) {
-    let diff = TEST_START_TIME - now;
-    let h = Math.floor(diff / 3600000);
-    let m = Math.floor((diff % 3600000) / 60000);
-    document.getElementById('timerMsg').innerHTML = `टेस्ट ${h} घंटे ${m} मिनट बाद शुरू होगा`;
-    return;
-  }
-  studentInfo.name = document.getElementById('studentName').value.trim();
-  studentInfo.class = document.getElementById('studentClass').value.trim();
-  studentInfo.roll = document.getElementById('rollNo').value.trim();
-  if (!studentInfo.name || !studentInfo.class || !studentInfo.roll) return alert("सारी जानकारी भरें!");
-  document.getElementById('startScreen').style.display = 'none';
-  document.getElementById('quizScreen').style.display = 'block';
-  showQuestion();
-};
-
-function showQuestion() {
-  let q = questions[currentQuestion];
-  document.getElementById('currentQ').textContent = currentQuestion + 1;
-  document.getElementById('question').innerHTML = `<strong>${q.q}</strong>`;
-  let html = "";
-  q.o.forEach((opt, i) => {
-    html += `<label class="option"><input type="radio" name="ans" value="${i}"> ${opt}</label>`;
-  });
-  document.getElementById('options').innerHTML = html;
+function startTest() {
+  name = document.getElementById("naam").value.trim();
+  if (!name) return alert("नाम तो लिखो भाई!");
+  document.getElementById("start").classList.add("hide");
+  document.getElementById("quiz").classList.remove("hide");
+  showQ();
 }
 
-document.getElementById('nextBtn').onclick = () => {
-  let selected = document.querySelector('input[name="ans"]:checked');
-  if (!selected) return alert("कोई विकल्प चुनें!");
-  selectedAnswers.push(parseInt(selected.value));
-  if (selected.value == questions[currentQuestion].a) score++;
-  currentQuestion++;
-  if (currentQuestion < 30) showQuestion();
-  else submitTest();
-};
-
-function submitTest() {
-  let data = {
-    name: studentInfo.name,
-    class: studentInfo.class,
-    roll: studentInfo.roll,
-    score: score,
-    percentage: (score*100/30).toFixed(2),
-    correct: score,
-    wrong: 30-score,
-    answers: selectedAnswers.map((ans, i) => questions[i].o[ans])
-  };
-
-  fetch(WEB_APP_URL, {method: "POST", body: JSON.stringify(data), headers: {"Content-Type": "application/json"}})
-  .then(() => {
-    document.getElementById('quizScreen').style.display = 'none';
-    document.getElementById('finalName').textContent = studentInfo.name;
-    document.getElementById('finalScore').textContent = score + "/30";
-    document.getElementById('finalPercent').textContent = data.percentage + "%";
-    document.getElementById('resultScreen').style.display = 'block';
+function showQ() {
+  document.getElementById("no").innerText = i+1;
+  document.getElementById("question").innerHTML = questions[i].q;
+  let opts = "";
+  questions[i].o.forEach((opt, idx) => {
+    opts += `<label class="opt"><input type="radio" name="a" value="${idx}"> ${opt}</label>`;
   });
+  document.getElementById("options").innerHTML = opts;
+}
+
+function next() {
+  let sel = document.querySelector('input[name="a"]:checked');
+  if (!sel) return alert("विकल्प चुनो!");
+  answers.push(sel.value);
+  if (parseInt(sel.value) === questions[i].a) score++;
+  i++;
+  if (i < 30) showQ();
+  else submit();
+}
+
+function submit() {
+  fetch(WEB_APP_URL, {
+    method: "POST",
+    body: JSON.stringify({
+      name: name,
+      score: score,
+      percentage: (score*100/30).toFixed(1),
+      correct: score,
+      wrong: 30-score,
+      answers: answers.map((a,idx) => questions[idx].o[a])
+    }),
+    headers: {"Content-Type": "application/json"}
+  });
+
+  document.getElementById("quiz").classList.add("hide");
+  document.getElementById("finalName").innerText = name;
+  document.getElementById("score").innerText = score + "/30";
+  document.getElementById("percent").innerText = (score*100/30).toFixed(1);
+  document.getElementById("result").classList.remove("hide");
 }
 </script>
 </body>
