--- a/index.html
+++ b/index.html
@@ -1,129 +1,125 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Excel MCQ Test</title>
-<style>
-  body {font-family: Arial, sans-serif; background: #f0f2f5; display: flex; justify-content: center; padding: 20px;}
-  .box {background: white; padding: 50px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); width: 100%; max-width: 700px; text-align: center;}
-  h1 {color: #2c3e50; margin-bottom: 30px;}
-  input {width: 100%; padding: 15px; margin: 15px 0; border-radius: 10px; border: 1px solid #ccc; font-size: 18px;}
-  button {width: 100%; padding: 15px; background: #27ae60; color: white; border: none; border-radius: 10px; font-size: 20px; cursor: pointer;}
-  button:hover {background: #1e8449;}
-  .hide {display: none;}
-  .qbox {margin: 30px 0; font-size: 19px; font-weight: bold;}
-  .opt {display: block; background: #f8f9fa; padding: 15px; margin: 12px 0; border-radius: 10px; text-align: left; cursor: pointer;}
-  .opt input {margin-right: 12px;}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Excel MCQ Test - Class</title>
+  <style>
+    body {font-family: Arial; background: #e8f4f8; padding: 20px; max-width: 900px; margin: auto;}
+    h1 {text-align: center; color: #2c3e50;}
+    input[type="text"] {width: 100%; padding: 12px; font-size: 18px; margin-bottom: 20px; border-radius: 8px; border: 1px solid #ccc;}
+    .q {background: white; padding: 20px; margin: 15px 0; border-radius: 10px; box-shadow: 0 3px 10px rgba(0,0,0,0.1);}
+    label {display: block; margin: 10px 0; font-size: 17px;}
+    button {background: #27ae60; color: white; padding: 15px 40px; font-size: 20px; border: none; border-radius: 8px; cursor: pointer; margin-top: 20px;}
+    button:hover {background: #219653;}
+  </style>
 </head>
 <body>
+  <h1>Excel MCQ Test</h1>
+  <input type="text" id="name" placeholder="Apna pura naam likho" required>
+  
+  <div class="q"><b>Q1.</b> Excel file ka default extension kya hai?<br>
+    <label><input type="radio" name="q1" value="A"> .xlsx</label>
+    <label><input type="radio" name="q1" value="B"> .xls</label>
+    <label><input type="radio" name="q1" value="C"> .csv</label>
+    <label><input type="radio" name="q1" value="D"> .xlsm</label>
+  </div>
 
-<div id="start" class="box">
-  <h1>Excel MCQ Test (30 प्रश्न)</h1>
-  <p>कोई टाइम लिमिट नहीं</p>
-  <input type="text" id="naam" placeholder="अपना पूरा नाम लिखें" required>
-  <button onclick="startTest()">टेस्ट शुरू करें</button>
-</div>
+  <div class="q"><b>Q2.</b> Excel mein cell address ka example?<br>
+    <label><input type="radio" name="q2" value="A"> A1</label>
+    <label><input type="radio" name="q2" value="B"> $A$1</label>
+    <label><input type="radio" name="q2" value="C"> Both A & B</label>
+    <label><input type="radio" name="q2" value="D"> None</label>
+  </div>
 
-<div id="quiz" class="box hide">
-  <h2>प्रश्न <span id="no">1</span>/30</h2>
-  <div class="qbox" id="question"></div>
-  <div id="options"></div>
-  <br>
-  <button onclick="next()">अगला प्रश्न →</button>
-</div>
+  <div class="q"><b>Q3.</b> SUM function ka use?<br>
+    <label><input type="radio" name="q3" value="A"> Numbers add karne ke liye</label>
+    <label><input type="radio" name="q3" value="B"> Text join karne ke liye</label>
+    <label><input type="radio" name="q3" value="C"> Average nikalne ke liye</label>
+    <label><input type="radio" name="q3" value="D"> None</label>
+  </div>
 
-<!-- Result screen ab nahi dikhega — sirf thank you -->
-<div id="thankyou" class="box hide">
-  <h1 style="color:#27ae60">धन्यवाद!</h1>
-  <h2>आपका टेस्ट सफलतापूर्वक जमा हो गया</h2>
-  <p>परिणाम आपको जल्द ही बताया जाएगा</p>
-</div>
+  <div class="q"><b>Q4.</b> VLOOKUP ka full form?<br>
+    <label><input type="radio" name="q4" value="A"> Vertical Lookup</label>
+    <label><input type="radio" name="q4" value="B"> Value Lookup</label>
+    <label><input type="radio" name="q4" value="C"> Visual Lookup</label>
+    <label><input type="radio" name="q4" value="D"> None</label>
+  </div>
 
-<script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbwxqo9BmWtPdAFBtNqllSvKt10Yq8nJ_JQ3o6dANcyPMnOkXB54VkgXYBmY1KObmnnScg/exec";
+  <div class="q"><b>Q5.</b> Pivot Table banane ke liye shortcut?<br>
+    <label><input type="radio" name="q5" value="A"> Alt + N + V</label>
+    <label><input type="radio" name="q5" value="B"> Ctrl + P</label>
+    <label><input type="radio" name="q5" value="C"> Alt + D + P</label>
+    <label><input type="radio" name="q5" value="D"> None</label>
+  </div>
 
-const questions = [
-  {q:"Excel में किसी cell का address क्या कहलाता है?", o:["Cell Name","Cell Reference","Cell Pointer","None"], a:1},
-  {q:"Latest Excel में कुल कितनी rows होती हैं?", o:["1,048,576","65,536","16,384","1,00,000"], a:0},
-  {q:"Freeze Panes का काम क्या है?", o:["Row/Column fix करना","Data delete करना","Print करना","Chart बनाना"], a:0},
-  {q:"=SUM(A1:A10) का मतलब?", o:["A1 से A10 तक जोड़ना","औसत","गिनती","Text जोड़ना"], a:0},
-  {q:"VLOOKUP का पूरा नाम?", o:["Vertical Lookup","Very Large Lookup","Value Lookup","None"], a:0},
-  {q:"Ctrl + ; दबाने से क्या होता है?", o:["आज की तारीख","समय","दोनों","कुछ नहीं"], a:0},
-  {q:"Conditional Formatting कहाँ मिलती है?", o:["Home Tab","Insert Tab","Data Tab","View Tab"], a:0},
-  {q:"Pivot Table का shortcut?", o:["Alt+N+V","Ctrl+T","Alt+D+P","कोई नहीं"], a:0},
-  {q:"Filter लगाने का shortcut?", o:["Ctrl+Shift+L","Ctrl+F","Alt+A+T","Ctrl+D"], a:0},
-  {q:"Excel फाइल का extension?", o:[".xlsx",".docx",".pptx",".txt"], a:0},
-  {q:"=AVERAGE() क्या करता है?", o:["औसत","जोड़","गिनती","बड़ा number"], a:0},
-  {q:"Ctrl + D का काम?", o:["नीचे fill","ऊपर copy","दायें copy","delete"], a:0},
-  {q:"Chart बनाने के लिए tab?", o:["Insert","Home","Data","Page Layout"], a:0},
-  {q:"=COUNT() क्या गिनता है?", o:["संख्या वाली cells","सभी cells","खाली cells","text"], a:0},
-  {q:"IF formula का syntax?", o:["=IF(condition,true,false)","=IFTRUE","=WHEN","कोई नहीं"], a:0},
-  {q:"Print preview?", o:["File → Print","Ctrl+P","दोनों","View Tab"], a:2},
-  {q:"Header & Footer कहाँ?", o:["Insert Tab","View Tab","Page Layout","Home"], a:0},
-  {q:"Ctrl + Shift + $ ?", o:["Currency format","Percentage","Date","Text"], a:0},
-  {q:"Data validation कहाँ?", o:["Data Tab","Home Tab","Insert","Review"], a:0},
-  {q:"=TODAY() क्या देता है?", o:["आज की तारीख","समय","दोनों","कुछ नहीं"], a:0},
-  {q:"Wrap text कहाँ?", o:["Home Tab","Insert","View","Page Layout"], a:0},
-  {q:"Merge & Center कहाँ?", o:["Home Tab","Insert","Data","View"], a:0},
-  {q:"Find & Replace shortcut?", o:["Ctrl+H","Ctrl+F","Ctrl+R","Alt+F"], a:0},
-  {q:"Protect sheet कहाँ?", o:["Review Tab","Data Tab","Home","View"], a:0},
-  {q:"Hyperlink shortcut?", o:["Ctrl+K","Ctrl+L","Alt+H","Insert Tab"], a:0},
-  {q:"=PROPER() क्या करता है?", o:["पहला अक्षर बड़ा","सब बड़ा","सब छोटा","कोई नहीं"], a:0},
-  {q:"Page break preview?", o:["View Tab","Page Layout","Insert","Status bar"], a:0},
-  {q:"Goal Seek कहाँ?", o:["Data → What-If","Formulas","Home","Review"], a:0},
-  {q:"Excel में columns कितने?", o:["16,384","1,048,576","65,536","कोई नहीं"], a:0},
-  {q:"=CONCATENATE का नया नाम?", o:["TEXTJOIN","CONCAT","&","दोनों A और B"], a:3}
-];
+  <div class="q"><b>Q6.</b> Conditional Formatting kahan milta hai?<br>
+    <label><input type="radio" name="q6" value="A"> Home Tab</label>
+    <label><input type="radio" name="q6" value="B"> Insert Tab</label>
+    <label><input type="radio" name="q6" value="C"> Data Tab</label>
+    <label><input type="radio" name="q6" value="D"> View Tab</label>
+  </div>
 
-let i = 0, score = 0, name = "", answers = [];
+  <div class="q"><b>Q7.</b> Chart insert karne ka shortcut?<br>
+    <label><input type="radio" name="q7" value="A"> F11</label>
+    <label><input type="radio" name="q7" value="B"> F10</label>
+    <label><input type="radio" name="q7" value="C"> Alt + F1</label>
+    <label><input type="radio" name="q7" value="D"> Both A & C</label>
+  </div>
 
-function startTest() {
-  name = document.getElementById("naam").value.trim();
-  if (!name) return alert("नाम लिखना जरूरी है!");
-  document.getElementById("start").classList.add("hide");
-  document.getElementById("quiz").classList.remove("hide");
-  showQ();
-}
+  <div class="q"><b>Q8.</b> Freeze Panes ka use?<br>
+    <label><input type="radio" name="q8" value="A"> Rows/Columns fix karne ke liye</label>
+    <label><input type="radio" name="q8" value="B"> Data sort karne ke liye</label>
+    <label><input type="radio" name="q8" value="C"> Filter lagane ke liye</label>
+    <label><input type="radio" name="q8" value="D"> None</label>
+  </div>
 
-function showQ() {
-  document.getElementById("no").innerText = i+1;
-  document.getElementById("question").innerHTML = questions[i].q;
-  let opts = "";
-  questions[i].o.forEach((opt, idx) => {
-    opts += `<label class="opt"><input type="radio" name="a" value="${idx}"> ${opt}</label>`;
-  });
-  document.getElementById("options").innerHTML = opts;
-}
+  <div class="q"><b>Q9.</b> COUNT function kitne cells count karta hai?<br>
+    <label><input type="radio" name="q9" value="A"> Numbers wale</label>
+    <label><input type="radio" name="q9" value="B"> Text wale</label>
+    <label><input type="radio" name="q9" value="C"> Sab</label>
+    <label><input type="radio" name="q9" value="D"> Blank</label>
+  </div>
 
-function next() {
-  let sel = document.querySelector('input[name="a"]:checked');
-  if (!sel) return alert("कोई विकल्प चुनो!");
-  answers.push(sel.value);
-  if (parseInt(sel.value) === questions[i].a) score++;
-  i++;
-  if (i < 30) showQ();
-  else submit();
-}
+  <div class="q"><b>Q10.</b> Excel mein maximum columns kitne hote hain?<br>
+    <label><input type="radio" name="q10" value="A"> 16384</label>
+    <label><input type="radio" name="q10" value="B"> 1024</label>
+    <label><input type="radio" name="q10" value="C"> 256</label>
+    <label><input type="radio" name="q10" value="D"> 65536</label>
+  </div>
 
-function submit() {
-  fetch(WEB_APP_URL, {
-    method: "POST",
-    body: JSON.stringify({
-      name: name,
-      score: score,
-      percentage: (score*100/30).toFixed(1),
-      correct: score,
-      wrong: 30-score,
-      answers: answers.map((a,idx) => questions[idx].o[a])
-    }),
-    headers: {"Content-Type": "application/json"}
-  });
+  <center><button onclick="submitAnswers()">Submit Test</button></center>
 
-  document.getElementById("quiz").classList.add("hide");
-  document.getElementById("thankyou").classList.remove("hide");   // ← सिर्फ धन्यवाद दिखेगा
-}
-</script>
+  <script>
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzzif34BqrFsnaKPnGYMfPGxbX9bDld13saJTpswWMy62BpQ5PNPre8WmaGz-hvHBp5/exec";
+
+    function submitAnswers() {
+      const name = document.getElementById("name").value.trim();
+      if (!name) { alert("Pehle naam likho bhai!"); return; }
+
+      const answers = {
+        name: name,
+        q1: document.querySelector('input[name="q1"]:checked')?.value || "",
+        q2: document.querySelector('input[name="q2"]:checked')?.value || "",
+        q3: document.querySelector('input[name="q3"]:checked')?.value || "",
+        q4: document.querySelector('input[name="q4"]:checked')?.value || "",
+        q5: document.querySelector('input[name="q5"]:checked')?.value || "",
+        q6: document.querySelector('input[name="q6"]:checked')?.value || "",
+        q7: document.querySelector('input[name="q7"]:checked')?.value || "",
+        q8: document.querySelector('input[name="q8"]:checked')?.value || "",
+        q9: document.querySelector('input[name="q9"]:checked')?.value || "",
+        q10: document.querySelector('input[name="q10"]:checked')?.value || ""
+      };
+
+      fetch(WEB_APP_URL, {
+        method: "POST",
+        body: JSON.stringify(answers),
+        headers: {"Content-Type": "text/plain;charset=utf-8"},
+        mode: "no-cors"
+      })
+      .then(() => alert("Test submit ho gaya! Data sheet mein aa gaya"))
+      .catch(() => alert("Submit ho gaya (no-cors mode)"));
+    }
+  </script>
 </body>
 </html>
