--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     label {display: block; margin: 10px 0; font-size: 17px;}
     button {background: #27ae60; color: white; padding: 15px 40px; font-size: 20px; border: none; border-radius: 8px; cursor: pointer; margin-top: 20px;}
     button:hover {background: #219653;}
+    #timer {text-align: center; font-size: 20px; margin-bottom: 20px;}
   </style>
 </head>
 <body>
   <h1>Excel MCQ Test</h1>
   <input type="text" id="name" placeholder="Apna pura naam likho" required>
+  <div id="timer">Time Left: 2:00</div>
   
   <div class="q"><b>Q1.</b> Excel file ka default extension kya hai?<br>
     <label><input type="radio" name="q1" value="A"> .xlsx</label>
@@ -93,20 +95,15 @@
   <script>
   const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzzif34BqrFsnaKPnGYMfPGxbX9bDld13saJTpswWMy62BpQ5PNPre8WmaGz-hvHBp5/exec";
 
-  // Timer setup
-  let timeLeft = 2 * 60; // 2 minutes in seconds
-  const timerDiv = document.createElement('div');
-  timerDiv.style.textAlign = 'center';
-  timerDiv.style.fontSize = '20px';
-  timerDiv.style.marginBottom = '20px';
-  document.body.insertBefore(timerDiv, document.body.children[2]); // name input ke baad
+  let timeLeft = 120;
+  const timerDiv = document.getElementById("timer");
 
-  const updateTimer = () => {
+  function updateTimer() {
     let minutes = Math.floor(timeLeft / 60);
     let seconds = timeLeft % 60;
     timerDiv.innerHTML = `Time Left: ${minutes}:${seconds < 10 ? '0'+seconds : seconds}`;
-    if (timeLeft <= 0) {
-      submitAnswers(true); // auto-submit
+    if(timeLeft <= 0){
+      submitAnswers(true);
       clearInterval(timerInterval);
     }
     timeLeft--;
@@ -115,46 +112,31 @@
   const timerInterval = setInterval(updateTimer, 1000);
   updateTimer();
 
-  function submitAnswers(auto=false) {
+  function submitAnswers(auto=false){
     const name = document.getElementById("name").value.trim();
-    if (!name) { alert("Pehle naam likho bhai!"); return; }
+    if(!name){ alert("Pehle naam likho bhai!"); return; }
 
-    const answers = {
-      name: name,
-      q1: document.querySelector('input[name="q1"]:checked')?.value || "",
-      q2: document.querySelector('input[name="q2"]:checked')?.value || "",
-      q3: document.querySelector('input[name="q3"]:checked')?.value || "",
-      q4: document.querySelector('input[name="q4"]:checked')?.value || "",
-      q5: document.querySelector('input[name="q5"]:checked')?.value || "",
-      q6: document.querySelector('input[name="q6"]:checked')?.value || "",
-      q7: document.querySelector('input[name="q7"]:checked')?.value || "",
-      q8: document.querySelector('input[name="q8"]:checked')?.value || "",
-      q9: document.querySelector('input[name="q9"]:checked')?.value || "",
-      q10: document.querySelector('input[name="q10"]:checked')?.value || ""
-    };
+    const answers = {};
+    for(let i=1;i<=10;i++){
+      answers["q"+i] = document.querySelector(`input[name="q${i}"]:checked`)?.value || "";
+    }
+    answers.name = name;
 
     const submitBtn = document.querySelector('button');
-    if (!auto) submitBtn.innerText = "Aapka test submit ho raha hai...";
+    if(!auto) submitBtn.innerText = "Aapka test submit ho raha hai...";
 
     fetch(WEB_APP_URL, {
       method: "POST",
       body: JSON.stringify(answers),
       headers: {"Content-Type": "text/plain;charset=utf-8"},
       mode: "no-cors"
-    })
-    .then(() => {
+    }).finally(()=>{
       clearInterval(timerInterval);
       alert("Dhanyawaad! Test submit ho gaya.");
       submitBtn.innerText = "Test Submitted";
       submitBtn.disabled = true;
-    })
-    .catch(() => {
-      clearInterval(timerInterval);
-      alert("Dhanyawaad! Test submit ho gaya (no-cors mode).");
-      submitBtn.innerText = "Test Submitted";
-      submitBtn.disabled = true;
     });
   }
-</script>
+  </script>
 </body>
 </html>
