--- a/index.html
+++ b/index.html
@@ -3,45 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Excel MCQ Test - Secure</title>
+  <title>Excel MCQ Test - Final Working</title>
   <style>
-    body {font-family: Arial; background: #e8f4f8; padding: 20px; max-width: 900px; margin: auto;}
-    h1, h2 {text-align: center; color: #2c3e50;}
-    .container {background: white; padding: 25px; border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.15);}
-    input[type="password"], input[type="text"] {width: 100%; padding: 14px; font-size: 18px; margin: 15px 0; border-radius: 8px; border: 1px solid #ccc;}
-    .q {background: #f8f9fa; padding: 20px; margin: 20px 0; border-radius: 10px; border-left: 5px solid #3498db;}
-    label {display: block; margin: 12px 0; font-size: 17px; cursor: pointer;}
+    body {font-family: Arial; background: #e8f4f8; padding: 20px; margin: 0;}
+    .container {max-width: 900px; margin: auto; background: white; padding: 30px; border-radius: 15px; box-shadow: 0 5px 25px rgba(0,0,0,0.2);}
+    h1 {text-align: center; color: #2c3e50;}
+    input[type="password"], input[type="text"] {width: 100%; padding: 15px; font-size: 18px; margin: 15px 0; border-radius: 8px; border: 1px solid #ddd;}
+    .hidden {display: none !important;}
     button {background: #27ae60; color: white; padding: 15px 50px; font-size: 20px; border: none; border-radius: 8px; cursor: pointer;}
     button:hover {background: #219653;}
-    button:disabled {background: #95a5a6; cursor: not-allowed;}
-    #timer {text-align: center; font-size: 24px; font-weight: bold; color: #e74c3c; margin: 20px 0;}
-    .hidden {display: none;}
-    .result {background: #ecf0f1; padding: 20px; border-radius: 10px; margin-top: 20px;}
+    #timer {text-align: center; font-size: 26px; font-weight: bold; color: #e74c3c; margin: 20px 0;}
+    .q {background: #f8f9fa; padding: 20px; margin: 20px 0; border-radius: 10px; border-left: 6px solid #3498db;}
+    label {display: block; margin: 12px 0; font-size: 17px; cursor: pointer;}
     .correct {color: green; font-weight: bold;}
     .wrong {color: red; font-weight: bold;}
     .not-attempted {color: orange; font-weight: bold;}
+    #errorMsg {color: red; text-align: center; font-weight: bold; margin-top: 10px;}
   </style>
 </head>
 <body>
 
 <div class="container">
 
-  <!-- Password Screen -->
+  <!-- PASSWORD SCREEN - SABSE PEHLE DIKHEGA -->
   <div id="passwordScreen">
     <h1>Excel MCQ Test</h1>
-    <p style="text-align:center; font-size:18px;">Test shuru karne ke liye password daaliye</p>
-    <input type="password" id="passInput" placeholder="Password daalein">
+    <p style="text-align:center; font-size:19px;">Test shuru karne ke liye password daaliye</p>
+    <input type="password" id="passInput" placeholder="Password yahan likhein">
     <center><button onclick="checkPassword()">Test Shuru Karein</button></center>
-    <p id="errorMsg" style="color:red; text-align:center;"></p>
+    <p id="errorMsg"></p>
   </div>
 
-  <!-- Test Screen -->
+  <!-- TEST SCREEN -->
   <div id="testScreen" class="hidden">
     <h1>Excel MCQ Test</h1>
     <input type="text" id="name" placeholder="Apna pura naam likhein" required>
     <div id="timer">Time Left: 2:00</div>
 
-    <!-- Questions -->
     <div class="q"><b>Q1.</b> Excel file ka default extension kya hai?<br>
       <label><input type="radio" name="q1" value="A"> A) .xlsx</label>
       <label><input type="radio" name="q1" value="B"> B) .xls</label>
@@ -106,9 +104,9 @@
     <center><button onclick="submitTest()">Submit Test</button></center>
   </div>
 
-  <!-- Result Screen -->
-  <div id="resultScreen" class="hidden result">
-    <h2>Test Submit Ho Gaya!</h2>
+  <!-- RESULT SCREEN -->
+  <div id="resultScreen" class="hidden">
+    <h2>Test Complete!</h2>
     <h3 id="finalScore"></h3>
     <div id="detailedResult"></div>
   </div>
@@ -116,108 +114,89 @@
 </div>
 
 <script>
-// ================= CONFIGURATION =================
-const TEST_PASSWORD = "12345";                    // ← Yahan password change kar dena
-const GOOGLE_SHEET_WEB_APP_URL = "https://script.google.com/macros/s/AKfycbzzif34BqrFsnaKPnGYMfPGxbX9bDld13saJTpswWMy62BpQ5PNPre8WmaGz-hvHBp5/exec";
+// PASSWORD (CHANGE KARO YAHAN)
+const TEST_PASSWORD = "12345";   // ←←← Yahan apna password daal do
 
-// Correct Answers (Index: 0=A, 1=B, 2=C, 3=D)
+// Correct Answers
 const correctAnswers = ["A","C","A","A","A","A","D","A","A","A"];
 const explanations = [
-  "Default extension .xlsx hai (2007 ke baad)",
-  "Dono A1 aur $A$1 cell address hote hain",
-  "SUM sirf numbers add karta hai",
-  "VLOOKUP = Vertical Lookup",
-  "Alt + N + V se Pivot Table banta hai",
-  "Conditional Formatting Home tab mein hota hai",
-  "F11 aur Alt+F1 dono chart banate hain",
-  "Freeze Panes se rows/columns fix karte hain",
-  "COUNT sirf numbers wali cells count karta hai",
-  "Excel mein 16,384 columns (XFD) tak hote hain"
+  "Default extension .xlsx hai", "Dono A1 aur $A$1 cell address hote hain", "SUM numbers add karta hai",
+  "VLOOKUP = Vertical Lookup", "Alt + N + V se Pivot Table", "Home Tab mein Conditional Formatting",
+  "F11 aur Alt+F1 dono chart banate hain", "Freeze Panes rows/columns fix karta hai",
+  "COUNT sirf numbers count karta hai", "16,384 columns (XFD) tak"
 ];
 
-// ================= PASSWORD & ATTEMPT CHECK =================
-function checkPassword() {
+// Yeh function page load hone pe chalega
+window.onload = function() {
+  // Agar pehle se test de chuka hai to direct result ya block
   if (localStorage.getItem("excelTestDone") === "true") {
-    document.getElementById("errorMsg").innerText = "Aap already test de chuke hain! Naye device se try karein.";
+    document.getElementById("passwordScreen").innerHTML = "<h2>Aap already test de chuke hain!<br>Naya device ya incognito mode use karein.</h2>";
     return;
   }
+};
 
+// Password check
+function checkPassword() {
   const pass = document.getElementById("passInput").value;
   if (pass === TEST_PASSWORD) {
     document.getElementById("passwordScreen").classList.add("hidden");
     document.getElementById("testScreen").classList.remove("hidden");
     startTimer();
   } else {
-    document.getElementById("errorMsg").innerText = "Galat Password! Dobara try karein.";
+    document.getElementById("errorMsg").innerText = "Galat Password!";
   }
 }
 
-// ================= TIMER =================
+// Timer
 let timeLeft = 120;
 let timerInterval;
-
 function startTimer() {
   timerInterval = setInterval(() => {
     timeLeft--;
-    let m = Math.floor(timeLeft / 60).toString().padStart(2, '0');
-    let s = (timeLeft % 60).toString().padStart(2, '0');
+    let m = String(Math.floor(timeLeft / 60)).padStart(2, '0');
+    let s = String(timeLeft % 60).padStart(2, '0');
     document.getElementById("timer").innerText = `Time Left: ${m}:${s}`;
-    if (timeLeft <= 0) {
-      clearInterval(timerInterval);
-      submitTest(true);
-    }
+    if (timeLeft <= 0) submitTest(true);
   }, 1000);
 }
 
-// ================= SUBMIT TEST =================
+// Submit
 function submitTest(auto = false) {
   clearInterval(timerInterval);
+  localStorage.setItem("excelTestDone", "true");  // Block future attempts
 
-  const name = document.getElementById("name").value.trim();
-  if (!name && !auto) {
-    alert("Pehle apna naam likho!");
-    return;
-  }
-
-  // Mark as attempted
-  localStorage.setItem("excelTestDone", "true");
-
-  // Collect answers
-  let userAnswers = [];
+  const name = document.getElementById("name").value.trim() || "Student";
   let score = 0;
+  let userAns = [];
+
   for (let i = 1; i <= 10; i++) {
-    const selected = document.querySelector(`input[name="q${i}"]:checked`);
-    const ans = selected ? selected.value : "Not Attempted";
-    userAnswers.push(ans);
+    const sel = document.querySelector(`input[name="q${i}"]:checked`);
+    const ans = sel ? sel.value : "Not Attempted";
+    userAns.push(ans);
     if (ans === correctAnswers[i-1]) score++;
   }
 
-  // Send to Google Sheet
-  const data = { name: name || "Unknown", score: `${score}/10`, answers: userAnswers.join("|") };
-  fetch(GOOGLE_SHEET_WEB_APP_URL, {
+  // Google Sheet bhejo (optional)
+  fetch("https://script.google.com/macros/s/AKfycbzzif34BqrFsnaKPnGYMfPGxbX9bDld13saJTpswWMy62BpQ5PNPre8WmaGz-hvHBp5/exec", {
     method: "POST",
-    body: JSON.stringify(data),
-    headers: {"Content-Type": "text/plain"},
+    body: JSON.stringify({name: name, score: score+"/10"}),
     mode: "no-cors"
   });
 
-  // Show Result
+  // Result dikhao
   document.getElementById("testScreen").classList.add("hidden");
   document.getElementById("resultScreen").classList.remove("hidden");
-  document.getElementById("finalScore").innerHTML = `<b>${name}</b>, Aapka Score: <span style="color:green;font-size:28px;">${score}/10</span>`;
+  document.getElementById("finalScore").innerHTML = `<b>${name}</b> → Score: <span style="color:green;font-size:30px">${score}/10</span>`;
 
-  // Detailed Result
-  const detailDiv = document.getElementById("detailedResult");
-  detailDiv.innerHTML = "<h3>Detailed Answers:</h3>";
-  correctAnswers.forEach((correct, idx) => {
-    const user = userAnswers[idx];
-    const status = user === correct ? "correct" : (user === "Not Attempted" ? "not-attempted" : "wrong");
-    detailDiv.innerHTML += `
-      <div style="margin:15px 0; padding:15px; background:#fff; border-radius:8px;">
-        <b>Q${idx+1}:</b> Aapka Jawab: <span class="${status}">${user}</span> | 
-        Sahi Jawab: <span class="correct">${correct}</span><br>
-        <small>${explanations[idx]}</small>
-      </div>`;
+  const res = document.getElementById("detailedResult");
+  res.innerHTML = "<h3>Detailed Answers:</h3>";
+  correctAnswers.forEach((c, i) => {
+    const u = userAns[i];
+    const col = u === c ? "correct" : (u === "Not Attempted" ? "not-attempted" : "wrong");
+    res.innerHTML += `<div style="background:#fff;padding:15px;margin:10px 0;border-radius:8px;">
+      <b>Q${i+1}:</b> Aapka → <span class="${col}">${u}</span> | Sahi → <span class="correct">${c}</span><br>
+      <small>${explanations[i]}</small>
+    </div>`;
   });
 }
 </script>
